<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".CheckPWActivity" >

    <TextView
        android:id="@+id/checkpw_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/checkpw_input"
        android:layout_marginBottom="15dp"
        android:text="@string/check_pw"
        android:textSize="20sp"
        android:textColor="@color/UPMC_COLOR" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/checkpw_input"
        android:layout_width="210dp"
        android:layout_above="@+id/showPW"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/hint"/>

    <CheckBox
        android:id="@+id/showPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#777777"
        android:layout_alignLeft="@id/checkpw_input"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/checkbox"/>

    <Button
        style="@style/CustomButton"
        android:id="@+id/button1"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/showPW"
        android:layout_marginTop="20dp"
        android:text="@string/button_subpw"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/forgotPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:textColor="#777777"
            android:text="@string/forgot" />

    </LinearLayout>

</RelativeLayout>