<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pw_input2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/create_pw"
        android:textColor="@color/UPMC_COLOR"
        android:textSize="20sp" />
    
    <EditText
        style="@style/CustomEditText"
        android:id="@+id/pw_input2"
        android:layout_above="@+id/showPW_create"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPassword" >
    </EditText>

    <CheckBox
        android:id="@+id/showPW_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="#777777"
        android:layout_alignLeft="@id/pw_input2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/checkbox"/>

    <Button
        android:id="@+id/button2"
        style="@style/CustomButton"
        android:layout_width="210dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/showPW_create"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/button_subpw" />

</RelativeLayout>